k8s/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: opendota-ml-pipeline-canary
  labels:
    app: opendota-ml-pipeline
    track: canary
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: opendota-ml-pipeline
    track: canary
