k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opendota-ml-pipeline-service
  labels:
    app: opendota-ml-pipeline
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: opendota-ml-pipeline
